[workspace]
members = [".", "caching-tool"]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
hound = "3.5"
rubato = "0.15"
rsworld = "0.1.0"
rsworld-sys = "0.1.0"
bincode = "1.3.3"
rayon = "1.11.0"
tracing = "0.1"
tracing-subscriber = "0.3"
zstd = "0.13.3"

[package]
name = "organum"
version = "0.0.2"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
serde_yaml = "0.9"
hound = { workspace = true }
rubato = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rsworld = { workspace = true }
rsworld-sys = { workspace = true }
bincode = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
getrandom = "0.4.2"

[[bin]]
name = "organum-resampler"
path = "src/bin/resampler.rs"

[[bin]]
name = "organum-wavtool"
path = "src/bin/wavtool.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
